# GameOfLife

./: CMakeLists.txt  Makefile  README.md
include/: engine.hpp  matrix.hpp
src/: engine.cpp  main.cpp  matrix.cpp  test.cpp
